export const snapshot = {};

snapshot[`Cycle View Command - Help Text 1`] = `
stdout:
'
Usage: view <cycleRef>

Description:

  View cycle details

Options:

  -h, --help          - Show this help.                      
  --team      <team>  - Team key (defaults to current team)  
  -j, --json          - Output as JSON                       

Examples:

  View a cycle as JSON linear cycle view 42 --team ENG --json 
  View a cycle by name linear cycle view "Cycle 42" --team ENG

'
stderr:
""
`;

snapshot[`Cycle View Command - JSON Missing Cycle Reference 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "unknown_error",
    "message": "Missing argument(s): cycleRef",
    "suggestion": null,
    "context": "Failed to view cycle"
  }
}
'
stderr:
""
`;

snapshot[`Cycle View Command - Active Cycle With Issues 1`] = `
stdout:
"# Sprint 13

**Number:** 13
**Start:** 2026-02-24
**End:** 2026-03-10
**Status:** Active
**Team:** Engineering (ENG)

**Created:** 1/1/2020
**Updated:** 1/15/2020

## Description

Focus on performance improvements

## Issues

**Progress:** 1/3 (33%)
**Total Issues:** 3
**Completed:** 1
**In Progress:** 1
**To Do:** 1

**Issues:**

- ENG-412: Fix auth token refresh (In Progress)
- ENG-398: Add dark mode toggle (Todo)
- ENG-401: Update onboarding flow (Done)
"
stderr:
""
`;

snapshot[`Cycle View Command - JSON Output 1`] = `
stdout:
'{
  "id": "cycle-2",
  "number": 13,
  "name": "Sprint 13",
  "description": "Focus on performance improvements",
  "startsAt": "2026-02-24T00:00:00.000Z",
  "endsAt": "2026-03-10T00:00:00.000Z",
  "completedAt": null,
  "status": "active",
  "isActive": true,
  "isFuture": false,
  "isPast": false,
  "progress": 0.5,
  "createdAt": "2020-01-01T10:00:00Z",
  "updatedAt": "2020-01-15T14:30:00Z",
  "team": {
    "id": "team-eng-id",
    "key": "ENG",
    "name": "Engineering"
  },
  "issueSummary": {
    "total": 2,
    "completed": 0,
    "started": 1,
    "unstarted": 1,
    "backlog": 0,
    "triage": 0,
    "canceled": 0
  },
  "issues": [
    {
      "id": "issue-1",
      "identifier": "ENG-412",
      "title": "Fix auth token refresh",
      "state": {
        "name": "In Progress",
        "type": "started",
        "color": "#f59e0b"
      }
    },
    {
      "id": "issue-2",
      "identifier": "ENG-398",
      "title": "Add dark mode toggle",
      "state": {
        "name": "Todo",
        "type": "unstarted",
        "color": "#94a3b8"
      }
    }
  ]
}
'
stderr:
""
`;

snapshot[`Cycle View Command - Cycle With No Issues 1`] = `
stdout:
"# Sprint 14

**Number:** 14
**Start:** 2026-03-10
**End:** 2026-03-24
**Status:** Upcoming
**Team:** Engineering (ENG)

**Created:** 1/1/2020
**Updated:** 1/1/2020

_No issues in this cycle yet._
"
stderr:
""
`;

snapshot[`Cycle View Command - JSON Cycle Not Found 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "not_found",
    "message": "Cycle not found: missing",
    "suggestion": null,
    "context": "Failed to view cycle"
  }
}
'
stderr:
""
`;

snapshot[`Cycle View Command - Many Issues Truncated 1`] = `
stdout:
"# Sprint 12

**Number:** 12
**Start:** 2026-02-10
**End:** 2026-02-24
**Status:** Completed
**Team:** Engineering (ENG)

**Created:** 1/1/2020
**Updated:** 1/20/2020

## Description

Completed sprint

## Issues

**Progress:** 8/15 (53%)
**Total Issues:** 15
**Completed:** 8
**In Progress:** 4
**To Do:** 3

**Issues:**

- ENG-100: Task 1 (Done)
- ENG-101: Task 2 (Done)
- ENG-102: Task 3 (Done)
- ENG-103: Task 4 (Done)
- ENG-104: Task 5 (Done)
- ENG-105: Task 6 (Done)
- ENG-106: Task 7 (Done)
- ENG-107: Task 8 (Done)
- ENG-108: Task 9 (In Progress)
- ENG-109: Task 10 (In Progress)

_...and 5 more issues_
"
stderr:
""
`;
